--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,17 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+
+    //for insurance SDK
+    lintOptions {
+        disable 'InvalidPackage'
+    }
+    packagingOptions {
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+    }
+
 }
 
 dependencies {
@@ -34,5 +45,10 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:2.2.0'
 
     implementation 'com.android.support:design:28.0.0'
+
+    //insurance SDK
+    implementation 'com.zendrive.sdk.android:ZendriveSDK:5.2.2'
+    implementation 'com.inrista.loggliest:loggliest:0.2'
+    implementation 'com.jakewharton.timber:timber:4.6.0'
 
 }
